--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aérospike 2036</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma/css/bulma.min.css">
+
+  <!-- Inclusion de la feuille de style Bulma -->
+  <link rel="stylesheet" href="./bulma/bulma.css">
+  <link rel="stylesheet" href="./bulma/update.css">
 </head>
 
 <body class="has-background-dark has-text-white">
@@ -13,8 +16,8 @@
 
     <div class="columns">
       <div class="column is-2 is-flex is-justify-content-center is-align-items-center">
-        <figure class="image is-128x128">
-          <img src="logo.webp" alt="Logo">
+        <figure class="image is-128x128 rotate-on-hover">
+          <img src="./images/logo.webp" alt="Logo">
         </figure>
       </div>
       <div class="column is-10">
@@ -28,13 +31,15 @@
 
 
 
-    <div class="column is-1 is-offset-11">
+    <div class="column is-2 is-offset-10">
 
 
-      <div class="box is-flex is-justify-content-space-between is-align-items-center"
-        style="padding: 0.5rem; border-radius: 8px;">
-        <span class="has-text-grey-dark">Jour J</span>
-        <span class="has-text-white has-background-info px-2" style="border-radius: 4px;">-3945</span>
+      <div class="container">
+        <div class="columns">
+          <div class="has-background-white rounded-left-corners"> <span class="has-text-black	  is-flex is-align-items-center p-2">Jour
+              J</span></div>
+          <div class="has-background-link rouded-right-corner"> <span class="p-2  is-flex is-align-items-center">-3945</span></div>
+        </div>
       </div>
 
     </div>
@@ -151,7 +156,7 @@
 
 
         <div class="columns is-multiline">
-          <!-- Carte 1 -->
+          <!-- Groupe 1 -->
           <div class="column is-6">
             <div class="card">
               <header class="card-header">
@@ -160,19 +165,19 @@
               <div class="card-content">
                 <ul>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/za.png" alt="Afrique du Sud" class="image is-24x24 mr-3">
+                    <img src="./images/flags/za.png" alt="Afrique du Sud" class="image is-24x24 mr-3">
                     Afrique du Sud
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/de.png" alt="Allemagne" class="image is-24x24 mr-3">
+                    <img src="./images/flags/de.png" alt="Allemagne" class="image is-24x24 mr-3">
                     Allemagne
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/ar.png" alt="Argentine" class="image is-24x24 mr-3">
+                    <img src="./images/flags/ar.png" alt="Argentine" class="image is-24x24 mr-3">
                     Argentine
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/au.png" alt="Australie" class="image is-24x24 mr-3">
+                    <img src="./images/flags/au.png" alt="Australie" class="image is-24x24 mr-3">
                     Australie
                   </li>
                 </ul>
@@ -180,7 +185,7 @@
             </div>
           </div>
 
-          <!-- Carte 2 -->
+          <!-- Groupe 2 -->
           <div class="column is-6">
             <div class="card">
               <header class="card-header">
@@ -189,19 +194,19 @@
               <div class="card-content">
                 <ul>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/at.png" alt="Autriche" class="image is-24x24 mr-3">
+                    <img src="./images/flags/at.png" alt="Autriche" class="image is-24x24 mr-3">
                     Autriche
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/bh.png" alt="Bahreïn" class="image is-24x24 mr-3">
+                    <img src="./images/flags/bh.png" alt="Bahreïn" class="image is-24x24 mr-3">
                     Bahreïn
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/be.png" alt="Belgique" class="image is-24x24 mr-3">
+                    <img src="./images/flags/be.png" alt="Belgique" class="image is-24x24 mr-3">
                     Belgique
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/br.png" alt="Brésil" class="image is-24x24 mr-3">
+                    <img src="./images/flags/br.png" alt="Brésil" class="image is-24x24 mr-3">
                     Brésil
                   </li>
                 </ul>
@@ -209,7 +214,7 @@
             </div>
           </div>
 
-          <!-- Carte 3 -->
+          <!-- Groupe 3 -->
           <div class="column is-6">
             <div class="card">
               <header class="card-header">
@@ -218,19 +223,19 @@
               <div class="card-content">
                 <ul>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/ca.png" alt="Canada" class="image is-24x24 mr-3">
+                    <img src="./images/flags/ca.png" alt="Canada" class="image is-24x24 mr-3">
                     Canada
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/cl.png" alt="Chili" class="image is-24x24 mr-3">
+                    <img src="./images/flags/cl.png" alt="Chili" class="image is-24x24 mr-3">
                     Chili
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/cn.png" alt="Chine" class="image is-24x24 mr-3">
+                    <img src="./images/flags/cn.png" alt="Chine" class="image is-24x24 mr-3">
                     Chine
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/co.png" alt="Colombie" class="image is-24x24 mr-3">
+                    <img src="./images/flags/co.png" alt="Colombie" class="image is-24x24 mr-3">
                     Colombie
                   </li>
                 </ul>
@@ -238,7 +243,7 @@
             </div>
           </div>
 
-          <!-- Carte 4 -->
+          <!-- Groupe 4 -->
           <div class="column is-6">
             <div class="card">
               <header class="card-header">
@@ -247,19 +252,19 @@
               <div class="card-content">
                 <ul>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/kr.png" alt="Corée du Sud" class="image is-24x24 mr-3">
+                    <img src="./images/flags/kr.png" alt="Corée du Sud" class="image is-24x24 mr-3">
                     Corée du Sud
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/hr.png" alt="Croatie" class="image is-24x24 mr-3">
+                    <img src="./images/flags/hr.png" alt="Croatie" class="image is-24x24 mr-3">
                     Croatie
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/dk.png" alt="Danemark" class="image is-24x24 mr-3">
+                    <img src="./images/flags/dk.png" alt="Danemark" class="image is-24x24 mr-3">
                     Danemark
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/eg.png" alt="Égypte" class="image is-24x24 mr-3">
+                    <img src="./images/flags/eg.png" alt="Égypte" class="image is-24x24 mr-3">
                     Égypte
                   </li>
                 </ul>
@@ -267,7 +272,7 @@
             </div>
           </div>
 
-          <!-- Carte 7 -->
+          <!-- Groupe 7 -->
           <div class="column is-6">
             <div class="card">
               <header class="card-header">
@@ -276,19 +281,19 @@
               <div class="card-content">
                 <ul>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/it.png" alt="Italie" class="image is-24x24 mr-3">
+                    <img src="./images/flags/it.png" alt="Italie" class="image is-24x24 mr-3">
                     Italie
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/jp.png" alt="Japon" class="image is-24x24 mr-3">
+                    <img src="./images/flags/jp.png" alt="Japon" class="image is-24x24 mr-3">
                     Japon
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/ke.png" alt="Kenya" class="image is-24x24 mr-3">
+                    <img src="./images/flags/ke.png" alt="Kenya" class="image is-24x24 mr-3">
                     Kenya
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/ma.png" alt="Maroc" class="image is-24x24 mr-3">
+                    <img src="./images/flags/ma.png" alt="Maroc" class="image is-24x24 mr-3">
                     Maroc
                   </li>
                 </ul>
@@ -296,7 +301,7 @@
             </div>
           </div>
 
-          <!-- Carte 8 -->
+          <!-- Groupe 8 -->
           <div class="column is-6">
             <div class="card">
               <header class="card-header">
@@ -305,19 +310,19 @@
               <div class="card-content">
                 <ul>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/mx.png" alt="Mexique" class="image is-24x24 mr-3">
+                    <img src="./images/flags/mx.png" alt="Mexique" class="image is-24x24 mr-3">
                     Mexique
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/nz.png" alt="Nouvelle-Zélande" class="image is-24x24 mr-3">
+                    <img src="./images/flags/nz.png" alt="Nouvelle-Zélande" class="image is-24x24 mr-3">
                     Nouvelle-Zélande
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/nl.png" alt="Pays-Bas" class="image is-24x24 mr-3">
+                    <img src="./images/flags/nl.png" alt="Pays-Bas" class="image is-24x24 mr-3">
                     Pays-Bas
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/ph.png" alt="Philippines" class="image is-24x24 mr-3">
+                    <img src="./images/flags/ph.png" alt="Philippines" class="image is-24x24 mr-3">
                     Philippines
                   </li>
                 </ul>
@@ -325,7 +330,7 @@
             </div>
           </div>
 
-          <!-- Carte 9 -->
+          <!-- Groupe 9 -->
           <div class="column is-6">
             <div class="card">
               <header class="card-header">
@@ -334,19 +339,19 @@
               <div class="card-content">
                 <ul>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/pl.png" alt="Pologne" class="image is-24x24 mr-3">
+                    <img src="./images/flags/pl.png" alt="Pologne" class="image is-24x24 mr-3">
                     Pologne
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/pt.png" alt="Portugal" class="image is-24x24 mr-3">
+                    <img src="./images/flags/pt.png" alt="Portugal" class="image is-24x24 mr-3">
                     Portugal
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/qa.png" alt="Qatar" class="image is-24x24 mr-3">
+                    <img src="./images/flags/qa.png" alt="Qatar" class="image is-24x24 mr-3">
                     Qatar
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/cz.png" alt="République Tchèque" class="image is-24x24 mr-3">
+                    <img src="./images/flags/cz.png" alt="République Tchèque" class="image is-24x24 mr-3">
                     République Tchèque
                   </li>
                 </ul>
@@ -354,7 +359,7 @@
             </div>
           </div>
 
-          <!-- Carte 10 -->
+          <!-- Groupe 10 -->
           <div class="column is-6">
             <div class="card">
               <header class="card-header">
@@ -363,19 +368,19 @@
               <div class="card-content">
                 <ul>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/ru.png" alt="Russie" class="image is-24x24 mr-3">
+                    <img src="./images/flags/ru.png" alt="Russie" class="image is-24x24 mr-3">
                     Russie
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/sg.png" alt="Singapour" class="image is-24x24 mr-3">
+                    <img src="./images/flags/sg.png" alt="Singapour" class="image is-24x24 mr-3">
                     Singapour
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/se.png" alt="Suède" class="image is-24x24 mr-3">
+                    <img src="./images/flags/se.png" alt="Suède" class="image is-24x24 mr-3">
                     Suède
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/ch.png" alt="Suisse" class="image is-24x24 mr-3">
+                    <img src="./images/flags/ch.png" alt="Suisse" class="image is-24x24 mr-3">
                     Suisse
                   </li>
                 </ul>
@@ -383,7 +388,7 @@
             </div>
           </div>
 
-          <!-- Carte 11 -->
+          <!-- Groupe 11 -->
           <div class="column is-6">
             <div class="card">
               <header class="card-header">
@@ -392,19 +397,19 @@
               <div class="card-content">
                 <ul>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/th.png" alt="Thaïlande" class="image is-24x24 mr-3">
+                    <img src="./images/flags/th.png" alt="Thaïlande" class="image is-24x24 mr-3">
                     Thaïlande
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/tr.png" alt="Turquie" class="image is-24x24 mr-3">
+                    <img src="./images/flags/tr.png" alt="Turquie" class="image is-24x24 mr-3">
                     Turquie
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/ua.png" alt="Ukraine" class="image is-24x24 mr-3">
+                    <img src="./images/flags/ua.png" alt="Ukraine" class="image is-24x24 mr-3">
                     Ukraine
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/uy.png" alt="Uruguay" class="image is-24x24 mr-3">
+                    <img src="./images/flags/uy.png" alt="Uruguay" class="image is-24x24 mr-3">
                     Uruguay
                   </li>
                 </ul>
@@ -412,7 +417,7 @@
             </div>
           </div>
 
-          <!-- Carte 12 -->
+          <!-- Groupe 12 -->
           <div class="column is-6">
             <div class="card">
               <header class="card-header">
@@ -421,19 +426,19 @@
               <div class="card-content">
                 <ul>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/vn.png" alt="Vietnam" class="image is-24x24 mr-3">
+                    <img src="./images/flags/vn.png" alt="Vietnam" class="image is-24x24 mr-3">
                     Vietnam
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/no.png" alt="Norvège" class="image is-24x24 mr-3">
+                    <img src="./images/flags/no.png" alt="Norvège" class="image is-24x24 mr-3">
                     Norvège
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/pe.png" alt="Pérou" class="image is-24x24 mr-3">
+                    <img src="./images/flags/pe.png" alt="Pérou" class="image is-24x24 mr-3">
                     Pérou
                   </li>
                   <li class="is-flex is-align-items-center mb-2">
-                    <img src="drap/sa.png" alt="Arabie Saoudite" class="image is-24x24 mr-3">
+                    <img src="./images/flags/sa.png" alt="Arabie Saoudite" class="image is-24x24 mr-3">
                     Arabie Saoudite
                   </li>
                 </ul>
