--- a/France.html
+++ b/France.html
@@ -36,9 +36,11 @@
 
       <div class="container">
         <div class="columns is-flex is-justify-content-flex-end is-mobile">
-          <div class="has-background-white rounded-left-corners"> <span class="has-text-black	  is-flex is-align-items-center p-2">Jour
+          <div class="has-background-white rounded-left-corners"> <span
+              class="has-text-black	  is-flex is-align-items-center p-2">Jour
               J</span></div>
-          <div class="has-background-link rouded-right-corner"> <span class="p-2  is-flex is-align-items-center">-3945</span></div>
+          <div class="has-background-link rouded-right-corner"> <span
+              class="p-2  is-flex is-align-items-center">-3945</span></div>
         </div>
       </div>
 
@@ -82,7 +84,9 @@
           Équipes
         </h2>
         <ul class="has-text-black	 is-size-5">
-          <li>France</li>
+          <a href="France.html">
+            <li>France</li>
+          </a>
           <li>Afrique du Sud</li>
           <li>Allemagne</li>
           <li>Argentine</li>
@@ -129,7 +133,7 @@
             <!-- Ligne de navigation -->
             <nav class="breadcrumb has-succeeds-separator is-size-6" aria-label="breadcrumbs">
               <ul>
-                <li><a href="#" class="has-text-info">LIA</a></li>
+                <li><a href="index.html" class="has-text-info">LIA</a></li>
                 <li><a href="#" class="has-text-info">Équipes</a></li>
                 <li class="is-active"><a href="#" aria-current="page">France</a></li>
               </ul>
@@ -142,62 +146,64 @@
         </section>
 
 
-        
-<!-- Emblème et informations principales -->
-<div class="columns">
-    <div class="column is-4">
-      <figure class="image is-128x128">
-        <img src="./images/flags/fr.png" alt="Emblème de la France">
-      </figure>
-    </div>
-    <div class="column is-8">
-      <table class="table is-fullwidth">
-        <tbody>
-          <tr>
-            <th class="has-text-black">Emblème</th>
-            <td><img src="./images/emblem_france.png" alt="Emblème de la France" class="image is-64x64"></td>
-          </tr>
-          <tr>
-            <th class="has-text-black">Couleurs</th>
-            <td class="has-text-black">Bleu, Blanc, Rouge</td>
-          </tr>
-          <tr>
-            <th class="has-text-black">Sélectionneur</th>
-            <td class="has-text-black">Didier Deschamps</td>
-          </tr>
-          <tr>
-            <th class="has-text-black">Capitaine</th>
-            <td class="has-text-black">Hugo Lloris</td>
-          </tr>
-          <tr>
-            <th class="has-text-black">Classement FIFA</th>
-            <td class="has-text-black">2<sup>e</sup></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  
-  <!-- Informations supplémentaires -->
-  <div class="content has-text-black">
-    <h3 class="title is-size-4 has-text-black">Historique</h3>
-    <p class="has-text-black">L'équipe de France de football, créée en 1904, est l'une des équipes nationales les plus titrées au monde. Elle a remporté deux Coupes du Monde (1998, 2018) et deux Championnats d'Europe (1984, 2000).</p>
-  
-    <h3 class="title is-size-4 has-text-black">Palmarès</h3>
-    <ul class="has-text-black">
-      <li>Coupe du Monde : 1998, 2018</li>
-      <li>Championnat d'Europe : 1984, 2000</li>
-      <li>Ligue des Nations : 2021</li>
-    </ul>
-  
-    <h3 class="title is-size-4 has-text-black">Joueurs Clés</h3>
-    <ul class="has-text-black">
-      <li>Kylian Mbappé</li>
-      <li>Antoine Griezmann</li>
-      <li>Paul Pogba</li>
-      <li>N'Golo Kanté</li>
-    </ul>
-  </div>
+        <section>
+          <!-- Emblème et informations principales -->
+          <div class="columns ">
+           
+            <div class="column is-8">
+              <div class="content">
+                <p class="has-text-black"><strong>Emblème:</strong>
+                <figure>
+                  <img class="rotating-flag" src="./images/emblem_france.png" alt="Emblème de la France">
+                </figure>
+                </p>
+                <p class="has-text-black"><strong>Couleurs:</strong> Bleu, Blanc, Rouge</p>
+                <p class="has-text-black"><strong>Sélectionneur:</strong> Didier Deschamps</p>
+                <p class="has-text-black"><strong>Capitaine:</strong> Hugo Lloris</p>
+                <p class="has-text-black"><strong>Classement FIFA:</strong> 2<sup>e</sup></p>
+              </div>
+            </div>
+            <div class="column is-4">
+              <p class="has-text-black my-6"><strong>drapeau:</strong>
+              <figure class="image is-128x128">
+                <div class="flag-wrapper">
+                  <img src="./images/flags/fr.png" alt="Emblème de la France" class=" is-paddingless">
+                </div>
+              </figure>
+            </div>
+          </div>
+
+          <!-- Informations supplémentaires -->
+          <div class="content has-text-black">
+            <h3 class="title is-size-4 has-text-black">Historique</h3>
+            <p class="has-text-black">L'équipe de France de football, créée en 1904, est l'une des équipes nationales
+              les plus titrées au monde. Elle a remporté deux Coupes du Monde (1998, 2018) et deux Championnats d'Europe
+              (1984, 2000).</p>
+
+            <h3 class="title is-size-4 has-text-black">Palmarès</h3>
+            <ul class="has-text-black">
+              <li>Coupe du Monde : 1998, 2018</li>
+              <li>Championnat d'Europe : 1984, 2000</li>
+              <li>Ligue des Nations : 2021</li>
+            </ul>
+
+            <h3 class="title is-size-4 has-text-black">Joueurs Clés</h3>
+            <ul class="has-text-black">
+              <li>Kylian Mbappé</li>
+              <li>Antoine Griezmann</li>
+              <li>Paul Pogba</li>
+              <li>N'Golo Kanté</li>
+            </ul>
+          </div>
+
+          <div class="columns">
+            <div class="colum is-12">
+              <img src="./images/france.jpg" alt="équipe de france" class="beautiful-image p-1 m-1">
+            </div>
+          </div>
+
+
+        </section>
 
       </div>
     </div>
