--- a/groupeA.html
+++ b/groupeA.html
@@ -87,7 +87,7 @@
           Équipes
         </h2>
         <ul class="has-text-black	 is-size-5">
-          <li>France</li>
+          <a href="France.html"><li>France</li></a>
           <li>Afrique du Sud</li>
           <li>Allemagne</li>
           <li>Argentine</li>
