--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           Équipes
         </h2>
         <ul class="has-text-black	 is-size-5">
-          <li>France</li>
+          <a href="France.html"><li>France</li></a>
           <li>Afrique du Sud</li>
           <li>Allemagne</li>
           <li>Argentine</li>
@@ -130,7 +130,7 @@
             <nav class="breadcrumb has-succeeds-separator is-size-6" aria-label="breadcrumbs">
               <ul>
                 <li><a href="#" class="has-text-info">LIA</a></li>
-                <li class="is-active"><a href="#" aria-current="page">Groupes</a></li>
+                <li class="is-active"><a href="groupeA.html" aria-current="page">Groupes</a></li>
               </ul>
             </nav>
             <!-- Titre principal -->
